force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__FilterType__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FilterType__c</fullName>
    <description>Type of filtering used in this condition.</description>
    <inlineHelpText>Choose Variable to evaluate this rule against a Summary Variable; otherwise, choose Value.</inlineHelpText>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Variable</fullName><default>false</default><label>Variable</label></value>
            <value><fullName>Value</fullName><default>false</default><label>Value</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>