force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__TestedField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TestedField__c</fullName>
    <description>Field on the Quote object that should be used in testing this condition.</description>
    <inlineHelpText>Field on the Quote object that should be used in testing this condition.</inlineHelpText>
    <label>Tested Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__TestedObject__c</controllingField>
        <valueSetDefinition>
            <value><fullName>Group Line Items</fullName><default>false</default><label>Group Line Items</label></value>
            <value><fullName>Unit Price</fullName><default>false</default><label>Unit Price</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>