force-app/main/default/objects/SBQQ__ErrorCondition__c/fields/SBQQ__TestedObject__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TestedObject__c</fullName>
    <description>Object that contains the field being tested by this condition.</description>
    <inlineHelpText>Specify the object that contains the tested field.</inlineHelpText>
    <label>Tested Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Quote</fullName><default>false</default><label>Quote</label></value>
            <value><fullName>Quote Line</fullName><default>false</default><label>Quote Line</label></value>
            <value><fullName>Quote Line Group</fullName><default>false</default><label>Quote Line Group</label></value>
            <value><fullName>Product Option</fullName><default>false</default><label>Product Option</label></value>
            <value><fullName>Configuration Attributes</fullName><default>false</default><label>Configuration Attributes</label></value>
            <value><fullName>Upgraded Asset</fullName><default>false</default><label>Upgraded Asset</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>